ArrowBuf Reading done for basic types